--- a/ML-Bayes rule classifier.ipynb
+++ b/ML-Bayes rule classifier.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ML Estimation assuming Gaussian Distribution followed by Bayes Rule for classification\n",
+    "\n",
+    "#### Importing Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +20,13 @@
     "from utils import mnist_reader\n",
     "X_train, y_train = mnist_reader.load_mnist('data/fashion', kind='train')\n",
     "X_test, y_test = mnist_reader.load_mnist('data/fashion', kind='t10k')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fixing the ill dimensions and flattening the data"
    ]
   },
   {
@@ -72,6 +88,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Defining the mean function which returns the mean and covariance matrix of a given class from the training set gives ans input"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -89,6 +112,13 @@
     "    #print(covm.shape)\n",
     "    #print(mean.shape)\n",
     "    return mean, covm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Segregating the training classes based on the training labels "
    ]
   },
   {
@@ -142,6 +172,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Defining pdf function to get the value for each test sample, based on which bayes rule for classification is applied"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -159,6 +196,13 @@
     "    #print(z)\n",
     "    return z\n",
     "#pdf(X_test[3],mean_for_all_class[3],cov_for_all_class[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normal ML + Bayes rule of classification (with 784 dimension for each test sample)"
    ]
   },
   {
@@ -212,6 +256,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reducing the dimension using PCA and going through the same pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -221,9 +272,10 @@
      "output_type": "stream",
      "text": [
       "original train shape:    (60000, 784)\n",
-      "transformed train shape: (60000, 15)\n",
+      "transformed train shape: (60000, 50)\n",
+      "0.8626590337034031\n",
       "original test shape:    (10000, 784)\n",
-      "transformed test shape: (10000, 15)\n"
+      "transformed test shape: (10000, 50)\n"
      ]
     }
    ],
@@ -232,13 +284,13 @@
     "\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "pca = PCA(n_components=15)\n",
-    "pca.fit(X_train)\n",
-    "X_pca_train = pca.transform(X_train)\n",
+    "pca = PCA(n_components=50) # reducing the dimension from 784 to 50\n",
+    "# pca.fit(X_train)\n",
+    "X_pca_train = pca.fit_transform(X_train)\n",
     "print(\"original train shape:   \", X_train.shape)\n",
     "print(\"transformed train shape:\", X_pca_train.shape)\n",
-    "\n",
-    "pca.fit(X_test)\n",
+    "print(np.sum(pca.explained_variance_ratio_))\n",
+    "# pca.fit(X_test)\n",
     "X_pca_test = pca.transform(X_test)\n",
     "print(\"original test shape:   \", X_test.shape)\n",
     "print(\"transformed test shape:\", X_pca_test.shape)"
@@ -278,19 +330,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 15, 1)\n",
-      "2.3969108919966974e-06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(mean_for_all_class_pca.shape)\n",
-    "print(np.linalg.det(cov_for_all_class_pca[3]))"
+    "#print(mean_for_all_class_pca.shape)\n",
+    "#print(np.sum(np.linalg.det(cov_for_all_class_pca)))"
    ]
   },
   {
@@ -328,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is-  33.62\n"
+      "The accuracy is-  79.92\n"
      ]
     }
    ],
@@ -342,24 +385,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Reducing the dimension from 50 to 9 usning LDA and giving the PCA data as input and going through the same pipeline"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original train shape:    (60000, 784)\n",
+      "original train shape:    (60000, 50)\n",
       "transformed train shape: (60000, 9)\n",
-      "original test shape:    (10000, 784)\n",
+      "original test shape:    (10000, 50)\n",
       "transformed test shape: (10000, 9)\n"
      ]
     }
@@ -367,19 +410,19 @@
    "source": [
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "lda = LinearDiscriminantAnalysis()\n",
-    "X_lda_train = lda.fit_transform(X_train,y_train)\n",
-    "X_lda_test = lda.fit_transform(X_test,y_test)\n",
+    "X_lda_train = lda.fit_transform(X_pca_train,y_train)\n",
+    "X_lda_test = lda.fit_transform(X_pca_test,y_test)\n",
     "\n",
-    "print(\"original train shape:   \", X_train.shape)\n",
+    "print(\"original train shape:   \", X_pca_train.shape)\n",
     "print(\"transformed train shape:\", X_lda_train.shape)\n",
     "\n",
-    "print(\"original test shape:   \", X_test.shape)\n",
+    "print(\"original test shape:   \", X_pca_test.shape)\n",
     "print(\"transformed test shape:\", X_lda_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,26 +452,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 9, 1)\n",
-      "0.07045797268375951\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(mean_for_all_class_lda.shape)\n",
-    "print(np.linalg.det(cov_for_all_class_lda[3]))"
+    "# printing some datas to confirm the right path\n",
+    "#print(mean_for_all_class_lda.shape)\n",
+    "#print(np.linalg.det(cov_for_all_class_lda[3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,14 +489,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is-  55.79\n"
+      "The accuracy is-  79.93\n"
      ]
     }
    ],
