--- a/Nearest neighbour.ipynb
+++ b/Nearest neighbour.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nearest Neighbour rule for classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importing the datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,6 +26,13 @@
     "from utils import mnist_reader\n",
     "X_train, y_train = mnist_reader.load_mnist('data/fashion', kind='train')\n",
     "X_test, y_test = mnist_reader.load_mnist('data/fashion', kind='t10k')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fixing the ill shapes of the data sets and flattening to work with numpy"
    ]
   },
   {
@@ -53,6 +74,13 @@
     "\n",
     "X_train = X_train/255\n",
     "X_test = X_test/255\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normal 1 - nearest neighbour classifier (user made)"
    ]
   },
   {
@@ -98,8 +126,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normal nearest neighbour classifier (inbuilt function) Here all the experiments with the k number of components have been done"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier(n_neighbors=5, metric='euclidean')\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred = knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy is-  85.54\n"
+     ]
+    }
+   ],
+   "source": [
+    "# accuracy\n",
+    "eff = 0\n",
+    "for loop in range(0,Y_test.shape[0]):\n",
+    "    if y_pred[loop]==Y_test[loop]:\n",
+    "        eff = eff + 1\n",
+    "print('The accuracy is- ',(eff*100)/Y_test.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying PCA to reduce the dimension from 784 to 50 and going through the same pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,30 +183,38 @@
      "output_type": "stream",
      "text": [
       "original train shape:    (60000, 784)\n",
-      "transformed train shape: (60000, 1)\n",
+      "transformed train shape: (60000, 50)\n",
+      "0.8626477562151992\n",
       "original test shape:    (10000, 784)\n",
-      "transformed test shape: (10000, 1)\n"
+      "transformed test shape: (10000, 50)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "pca = PCA(n_components=1)\n",
-    "pca.fit(X_train)\n",
-    "X_pca_train = pca.transform(X_train)\n",
+    "pca = PCA(n_components=50)\n",
+    "#pca.fit(X_train)\n",
+    "X_pca_train = pca.fit_transform(X_train)\n",
     "print(\"original train shape:   \", X_train.shape)\n",
     "print(\"transformed train shape:\", X_pca_train.shape)\n",
-    "\n",
-    "pca.fit(X_test)\n",
+    "print(np.sum(pca.explained_variance_ratio_))\n",
+    "#pca.fit(X_test)\n",
     "X_pca_test = pca.transform(X_test)\n",
     "print(\"original test shape:   \", X_test.shape)\n",
     "print(\"transformed test shape:\", X_pca_test.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Printing after every 500 test samples have been labeled"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -177,14 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is-  22.57\n"
+      "The accuracy is-  84.11\n"
      ]
     }
    ],
@@ -198,37 +282,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using LDA to decrease the dimension from 50 to 9 by giving PCA as the input instead of the original data and going through the same pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original train shape:    (60000, 784)\n",
-      "transformed train shape: (60000, 1)\n",
-      "original test shape:    (10000, 784)\n",
-      "transformed test shape: (10000, 1)\n"
+      "original train shape:    (60000, 50)\n",
+      "transformed train shape: (60000, 9)\n",
+      "original test shape:    (10000, 50)\n",
+      "transformed test shape: (10000, 9)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "lda = LinearDiscriminantAnalysis(n_components=1)\n",
-    "X_lda_train = lda.fit_transform(X_train,y_train)\n",
-    "X_lda_test = lda.transform(X_test)\n",
+    "lda = LinearDiscriminantAnalysis()\n",
+    "X_lda_train = lda.fit_transform(X_pca_train,y_train)\n",
+    "X_lda_test = lda.transform(X_pca_test)\n",
     "\n",
-    "print(\"original train shape:   \", X_train.shape)\n",
+    "print(\"original train shape:   \", X_pca_train.shape)\n",
     "print(\"transformed train shape:\", X_lda_train.shape)\n",
     "\n",
-    "print(\"original test shape:   \", X_test.shape)\n",
+    "print(\"original test shape:   \", X_pca_test.shape)\n",
     "print(\"transformed test shape:\", X_lda_test.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Printing after every 500 test samples have been labeled"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is-  39.9\n"
+      "The accuracy is-  78.29\n"
      ]
     }
    ],
@@ -292,59 +390,6 @@
     "        eff = eff + 1\n",
     "print('The accuracy is- ',(eff*100)/Y_test.shape[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'accuracy_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-18a6328b8ff4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlda\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlda\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mfull_accuracy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'accuracy_score' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "'''\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
-    "lda = LDA()\n",
-    "lda.fit(X_train, y_train)\n",
-    "predicted = lda.predict(X_test)\n",
-    "full_accuracy = accuracy_score(y_test, predicted)\n",
-    "\n",
-    "\n",
-    "reduction = LDA(n_components=5)\n",
-    "X1red = reduction.fit_transform(X_train, y_train)\n",
-    "X2red = reduction.transform(X_test)\n",
-    "\n",
-    "\n",
-    "lda.fit(X1red, y_train)\n",
-    "predicted = lda.predict(X2red)\n",
-    "reduced_accuracy = accuracy_score(predicted, y_test)\n",
-    "\n",
-    "print (full_accuracy, reduced_accuracy, reduced_accuracy/full_accuracy)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
