--- a/ML-Bayes rule classifier.ipynb
+++ b/ML-Bayes rule classifier.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
      "text": [
       "original train shape:    (60000, 784)\n",
       "transformed train shape: (60000, 50)\n",
-      "0.8626590337034031\n",
+      "0.8626437338081597\n",
       "original test shape:    (10000, 784)\n",
       "transformed test shape: (10000, 50)\n"
      ]
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#id = 0.5*np.identity(784)\n",
+    "#id = 0.5*np.identity(50)\n",
     "train_pca = []\n",
     "m_pca = []\n",
     "c_pca = []\n",
@@ -316,7 +316,7 @@
     "        i = i+1\n",
     "    train_pca = np.array(train_pca)\n",
     "    m_pca, c_pca = mean(train_pca.T)\n",
-    "    #c= c+ id\n",
+    "    #c_pca= c_pca+ id\n",
     "    mean_for_all_class_pca.append(m_pca)\n",
     "    cov_for_all_class_pca.append(c_pca)\n",
     "    #print(train.shape)\n",
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is-  79.92\n"
+      "The accuracy is-  79.93\n"
      ]
     }
    ],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,14 +489,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is-  79.93\n"
+      "The accuracy is-  80.0\n"
      ]
     }
    ],
